--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
+
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 360.4 181.74" style="enable-background:new 0 0 360.4 181.74;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#E00918;stroke:#EBDA11;stroke-miterlimit:10;}
-	.st1{fill:#010202;stroke:#DBD232;stroke-miterlimit:10;}
-	.st2{fill:#010202;}
-	.st3{fill:none;stroke:#DCD32A;stroke-miterlimit:10;}
+	.st0{stroke:#040506;stroke-miterlimit:10;}
+	.st1{fill:#E00918;stroke:#EBDA11;stroke-miterlimit:10;}
+	.st2{fill:#010202;stroke:#DBD232;stroke-miterlimit:10;}
+	.st3{fill:#010202;}
+	.st4{fill:none;stroke:#DCD32A;stroke-miterlimit:10;}
 </style>
+<g id="Capa_4">
+	<rect y="-3.24" class="st0" width="360.4" height="184.99"/>
+</g>
 <g id="Capa_1">
 	
 		<image style="overflow:visible;" width="715" height="706" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAssAAALCCAYAAAAoB54TAAAACXBIWXMAAC4jAAAuIwF4pT92AAAg
@@ -1715,11 +1721,11 @@ Y6rnGS9rWZIQQghpBoplQhqjuz9cSNzjwd/BfCiOS0wTIYQQQpqHYpmQxgmmzXvDX7tNbRoNMxeL
 	</image>
 </g>
 <g id="Capa_2">
-	<path class="st0" d="M211.89,122.51c0.04,0.35,0.04,0.75-0.17,0.88c-0.25,0.15-0.56-0.16-0.82,0c-0.27,0.17-0.31,0.76-0.08,0.97
+	<path class="st1" d="M211.89,122.51c0.04,0.35,0.04,0.75-0.17,0.88c-0.25,0.15-0.56-0.16-0.82,0c-0.27,0.17-0.31,0.76-0.08,0.97
 		c0.17,0.15,0.38,0.01,0.56,0.18c0.18,0.17,0.03,0.36,0.19,0.61c0.18,0.27,0.43,0.15,0.72,0.46c0.23,0.24,0.16,0.4,0.37,0.53
 		c0.19,0.12,0.51,0.16,0.65,0.02c0.19-0.18-0.08-0.49,0.1-0.78c0.17-0.28,0.52-0.15,0.78-0.5c0.02-0.03,0.25-0.33,0.15-0.54
 		c-0.14-0.28-0.78-0.01-1.26-0.29c-0.27-0.16-0.54-0.52-0.61-1.39L211.89,122.51z"/>
-	<path class="st0" d="M146.66,142.85c-3.5,4.28-5.87,5.1-13.17,11.76c-4.38,3.99-8.71,7.98-7.76,9c1.47,1.58,14.21-5.49,16.42-3.34
+	<path class="st1" d="M146.66,142.85c-3.5,4.28-5.87,5.1-13.17,11.76c-4.38,3.99-8.71,7.98-7.76,9c1.47,1.58,14.21-5.49,16.42-3.34
 		c1.06,1.03-1.56,2.97-2.1,7.18c-0.07,0.54-0.86,7.55,3.85,10.46c5.16,3.19,14.4-0.11,18.86-2.46c5.29-2.79,8.87-6.93,9.7-6.42
 		c0.51,0.31-0.73,1.89-0.52,4.92c0.07,0.99,0.17,2.23,0.97,2.5c1.05,0.35,2.69-1.13,3.01-1.42c4.03-3.63,1.08-8.14,4.19-12.81
 		c1.04-1.56,1.3-0.96,6.38-4.84c6.96-5.32,10.52-8.11,11.7-12.47c0.43-1.59,1.26-4.65-0.54-7.44c-1.23-1.9-2.72-2.18-3-3.84
@@ -1733,18 +1739,18 @@ Y6rnGS9rWZIQQghpBoplQhqjuz9cSNzjwd/BfCiOS0wTIYQQQpqHYpmQxgmmzXvDX7tNbRoNMxeL
 <g id="Capa_3">
 	<g>
 		<g>
-			<path class="st1" d="M174.33,168.98c-0.11,0-0.22-0.01-0.32-0.04c-0.2-0.05-0.38-0.09-0.53-0.12c-0.16-0.03-0.33-0.06-0.53-0.09
-				c-0.67-0.1-1.18-0.66-1.21-1.33c-0.05-1-0.19-2.73-0.42-5.13c-0.17-1.8-0.33-3.28-0.46-4.43l-5.44-1.04l-5.53,8.53
-				c-0.27,0.41-0.72,0.65-1.19,0.65c-0.11,0-0.22-0.01-0.32-0.04c-0.2-0.05-0.38-0.09-0.54-0.12c-0.16-0.03-0.35-0.06-0.54-0.09
-				c-0.48-0.07-0.9-0.38-1.09-0.83c-0.2-0.45-0.15-0.96,0.12-1.37l6.34-9.35l5.59-8.29l1.16-1.78c0.27-0.41,0.72-0.64,1.19-0.64
-				c0.11,0,0.22,0.01,0.33,0.04c0.2,0.05,0.41,0.09,0.64,0.14c0.24,0.05,0.46,0.08,0.65,0.11c0.65,0.09,1.14,0.61,1.21,1.26
-				l0.9,9.02l1.43,13.37c0.05,0.46-0.13,0.91-0.47,1.21C175,168.85,174.67,168.98,174.33,168.98z M170.43,153.84l-0.42-3.88
-				l-2.28,3.37L170.43,153.84z"/>
+			<path class="st2" d="M174.31,168.99c-0.11,0-0.22-0.01-0.33-0.04c-0.2-0.05-0.38-0.09-0.53-0.12c-0.15-0.03-0.33-0.06-0.52-0.09
+				c-0.67-0.09-1.18-0.65-1.22-1.33c-0.05-1.03-0.2-2.75-0.42-5.13c-0.17-1.79-0.32-3.28-0.46-4.43l-5.44-1.04l-5.53,8.53
+				c-0.27,0.41-0.72,0.65-1.19,0.65c-0.11,0-0.22-0.01-0.33-0.04c-0.19-0.05-0.37-0.08-0.53-0.12c-0.17-0.03-0.35-0.06-0.54-0.09
+				c-0.48-0.07-0.9-0.38-1.1-0.83c-0.2-0.45-0.15-0.96,0.12-1.37l6.34-9.35l5.59-8.29l1.16-1.78c0.27-0.41,0.72-0.64,1.19-0.64
+				c0.11,0,0.22,0.01,0.34,0.04c0.2,0.05,0.41,0.09,0.64,0.14c0.23,0.04,0.44,0.08,0.63,0.11c0.65,0.09,1.15,0.61,1.22,1.26
+				l0.9,9.02l1.43,13.37c0.05,0.46-0.13,0.91-0.47,1.21C174.99,168.87,174.65,168.99,174.31,168.99z M170.42,153.85l-0.42-3.88
+				l-2.28,3.37L170.42,153.85z"/>
 		</g>
 	</g>
 	<g>
 		<g>
-			<path class="st2" d="M174.53,158.55c-0.28,0-0.56,0-0.84-0.01c-1.51-0.04-2.89-0.14-4.08-0.3c-2.52-0.35-4.88-1.09-7.02-2.2
+			<path class="st3" d="M174.53,158.55c-0.28,0-0.56,0-0.84-0.01c-1.51-0.04-2.89-0.14-4.08-0.3c-2.52-0.35-4.88-1.09-7.02-2.2
 				c-2.18-1.13-4.02-2.65-5.45-4.5c-1.44-1.87-2.4-4-2.87-6.35c-0.45-2.29-0.51-4.67-0.17-7.06c0.38-2.66,1.19-5.2,2.43-7.57
 				c1.26-2.42,2.91-4.38,4.9-5.84c1.99-1.45,4.28-2.43,6.83-2.91c1.39-0.26,2.83-0.4,4.28-0.4c1.14,0,2.32,0.08,3.5,0.25
 				c0.87,0.12,1.84,0.29,2.87,0.52c1.03,0.23,1.85,0.43,2.51,0.63c0.67,0.2,1.53,0.49,2.57,0.86c0.61,0.22,0.99,0.82,0.93,1.46
@@ -1754,7 +1760,7 @@ Y6rnGS9rWZIQQghpBoplQhqjuz9cSNzjwd/BfCiOS0wTIYQQQpqHYpmQxgmmzXvDX7tNbRoNMxeL
 				c0.33,1.81,1,3.4,2,4.71c1.01,1.33,2.31,2.43,3.86,3.26c1.57,0.85,3.38,1.42,5.37,1.69c0.95,0.13,1.98,0.2,3.04,0.2
 				c1.75,0,3.67-0.18,5.71-0.53c0.08-0.01,0.16-0.02,0.24-0.02c0.42,0,0.82,0.19,1.1,0.52c0.32,0.39,0.41,0.93,0.23,1.41
 				c-0.19,0.49-0.37,1.08-0.54,1.77c-0.15,0.58-0.64,1-1.23,1.06C177.19,158.48,175.81,158.55,174.53,158.55z"/>
-			<path class="st3" d="M174.53,158.55c-0.28,0-0.56,0-0.84-0.01c-1.51-0.04-2.89-0.14-4.08-0.3c-2.52-0.35-4.88-1.09-7.02-2.2
+			<path class="st4" d="M174.53,158.55c-0.28,0-0.56,0-0.84-0.01c-1.51-0.04-2.89-0.14-4.08-0.3c-2.52-0.35-4.88-1.09-7.02-2.2
 				c-2.18-1.13-4.02-2.65-5.45-4.5c-1.44-1.87-2.4-4-2.87-6.35c-0.45-2.29-0.51-4.67-0.17-7.06c0.38-2.66,1.19-5.2,2.43-7.57
 				c1.26-2.42,2.91-4.38,4.9-5.84c1.99-1.45,4.28-2.43,6.83-2.91c1.39-0.26,2.83-0.4,4.28-0.4c1.14,0,2.32,0.08,3.5,0.25
 				c0.87,0.12,1.84,0.29,2.87,0.52c1.03,0.23,1.85,0.43,2.51,0.63c0.67,0.2,1.53,0.49,2.57,0.86c0.61,0.22,0.99,0.82,0.93,1.46
@@ -1768,6 +1774,8 @@ Y6rnGS9rWZIQQghpBoplQhqjuz9cSNzjwd/BfCiOS0wTIYQQQpqHYpmQxgmmzXvDX7tNbRoNMxeL
 	</g>
 </g>
 </svg>
+
+	
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
